<resources>
    <string name="app_name">Course Assistant</string>

    <string name="app_label">Course Assistant</string>

    <string name="hint_name">Name</string>
    <string name="hint_total_course">Total course</string>
    <string name="hint_total_semester">Total semester</string>
    <string name="hint_total_credit">Total credit</string>
    <string name="hint_university">Ex: BUET</string>
    <string name="hint_department">Ex: CSE</string>

    <string name="text_university">University</string>
    <string name="text_department">Department</string>
    <string name="text_sign_in">Sign in</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="sign_in_success">You signed in: </string>
    <string name="log_in_failed">"Log in failed</string>

    <string name="add_profile">Done</string>

    <string name="search_menu_text">Search</string>
    <string name="search_hint">Enter Course Code</string>

    <string name="sign_in_prompt">Let us know who you are?</string>
    <string name="add_profile_prompt">Enter your Educational State</string>

    <string name="no_record">No Record Found. Create Your Profile</string>

    <string name="log_in_first">You need to log in first!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
