<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/mainBackground"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/input_holder"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <EditText
            android:layout_gravity="center_vertical"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:background="@drawable/arch"
            android:hint="@string/hint_name"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:textColor="@color/logInTextColor"
                android:text="@string/text_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:textColor="@color/logInTextColor"
                android:text="@string/text_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:background="@drawable/arch"
            android:hint="@string/hint_total_course"/>

        <EditText
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:background="@drawable/arch"
            android:hint="@string/hint_total_semester"/>

        <EditText
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:background="@drawable/arch"
            android:hint="@string/hint_total_credit"/>

    </LinearLayout>

    <TextView
        android:layout_below="@id/input_holder"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/arch"
        android:paddingLeft="16dp"
        android:textColor="@color/mainBackground"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingRight="16dp"
        android:text="@string/text_sign_in"
        android:layout_width="80dp"
        android:layout_height="30dp" />




</RelativeLayout>