<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogInAddProfileFragment">

    <TextView
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/promptColor"
        android:text="@string/add_profile_prompt"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:maxLines="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/input_holder"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="100dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:textColor="@color/logInTextColor"
                android:text="@string/text_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <Spinner
                android:id="@+id/spinner_university"
                android:layout_width="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

        <EditText
            android:textSize="15sp"
            android:id="@+id/et_university"
            android:background="@drawable/arch"
            android:hint="@string/hint_university"
            android:paddingLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:textColor="@color/logInTextColor"
                android:text="@string/text_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <Spinner
                android:id="@+id/spinner_department"
                android:layout_width="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_department"
            android:textSize="15sp"
            android:background="@drawable/arch"
            android:hint="@string/hint_department"
            android:paddingLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/et_total_course"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:background="@drawable/arch"
            android:hint="@string/hint_total_course"/>

        <EditText
            android:id="@+id/et_total_semester"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:background="@drawable/arch"
            android:hint="@string/hint_total_semester"/>

        <EditText
            android:id="@+id/et_total_credit"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="15sp"
            android:background="@drawable/arch"
            android:hint="@string/hint_total_credit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_done"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_below="@id/input_holder"
        android:background="@drawable/arch"
        android:layout_width="wrap_content"
        android:layout_height="30dp">
        <ImageView
            android:padding="5dp"
            android:src="@drawable/ic_done"
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_add_profile"
            android:textColor="@color/mainBackground"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingRight="16dp"
            android:text="@string/add_profile"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />
    </LinearLayout>

</RelativeLayout>